turnip: EXT_primitives_generated_query broken
This caselist fails:
GTF-GL46.gtf21.GL.vec.vec3_float_vec2_frag
GTF-GL46.gtf40.GL3Tests.transform_feedback2.transform_feedback2_basic
Both tests pass separately. In the second test, there is 1 draw. The draw should produce 2 primitives generated as a result, but it instead produces 6. I'm guessing some internal operation is being counted in this similar to #6559 (closed)